#62 fixed button alignment

--- a/frontend/src/Components/Products/ProductDetails/productdetails.module.css
+++ b/frontend/src/Components/Products/ProductDetails/productdetails.module.css
@@ -29,6 +29,10 @@
     margin: 40px;
 }
 
+.ProductInfo button{
+    margin:20px;
+}
+
 .ProductInfo hr {
     width: 80%;
 }
