--- a/frontend/src/UI/Button/button.module.css
+++ b/frontend/src/UI/Button/button.module.css
@@ -3,7 +3,7 @@
     border: 1px solid #36454f;
     width: 80%;
     height:10%;
-    margin: 20px;
+    /*margin: 20px;*/
     outline: none;
     border-radius: 5px;
     background-color: white;
